--- a/requirements.txt
+++ b/requirements.txt
@@ -1,286 +1,9 @@
-absl-py==0.13.0
-aiobotocore==1.3.1
-aiohttp==3.7.4.post0
-aioitertools==0.7.1
-alembic==1.6.5
-altair==4.1.0
-
-anyio==3.2.1
-appnope==0.1.2
-argon2-cffi==20.1.0
-arrow==1.1.1
-astor==0.8.1
-astroid==2.6.2
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-backports.functools-lru-cache==1.6.4
-base58==2.1.0
-beautifulsoup4==4.9.3
-bleach==3.3.0
-blinker==1.4
-blis==0.7.4
-bokeh==2.3.2
-botocore==1.20.49
-Brotli==1.0.9
-brotlipy==0.7.0
-cachetools==4.2.2
-catalogue==2.0.4
-certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
-chromedriver-binary==92.0.4515.43.0
-click==7.1.2
-cloudpickle==1.6.0
-clyent==1.2.2
-colorama==0.4.4
-cryptography==3.4.7
-cycler==0.10.0
-cymem==2.0.5
-cytoolz==0.11.0
-dash==1.21.0
-dash-core-components==1.17.1
-dash-html-components==1.1.4
-dash-table==4.12.0
-dask==2021.6.2
-dask-glm==0.2.0
-dask-ml==1.9.0
-debugpy==1.3.0
-decorator==4.4.2
-defusedxml==0.7.1
-Deprecated==1.2.12
-distributed==2021.6.2
-dnspython==2.1.0
-docopt==0.6.2
-entrypoints==0.3
-fake-useragent==0.1.11
-Faker==8.10.0
-findspark==1.3.0
-flashtext==2.7
-Flask==2.0.1
-Flask-Compress==1.10.1
-Flask-Cors==3.0.10
-flatbuffers==1.12
-fsspec==2021.6.1
-future==0.18.2
-fuzzywuzzy==0.18.0
-gamma==0.3.10
-gast==0.4.0
-gensim==4.0.1
-gitdb==4.0.7
-GitPython==3.1.18
-google-auth==1.32.1
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-greenlet==1.1.0
-grpcio==1.34.1
-h5py==3.1.0
-HeapDict==1.0.1
-html5lib==1.1
-idna==2.10
-imbalanced-learn==0.8.0
-importlib-metadata==4.6.1
-ipykernel==6.0.1
-ipython==7.25.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==5.9.1
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.1
-jmespath==0.10.0
-joblib==1.0.1
-json5==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.5.1
-jupyter-core==4.7.1
-jupyter-highlight-selected-word==0.2.0
-jupyter-http-over-ws==0.0.8
-jupyter-latex-envs==1.4.6
-jupyter-nbextensions-configurator==0.4.1
-jupyter-server==1.9.0
-jupyterlab==3.0.16
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.6.0
-jupyterlab-widgets==1.0.0
-kaggle==1.5.12
-Keras==2.4.3
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-lazy-object-proxy==1.6.0
-line-profiler==3.3.0
-llvmlite==0.36.0
-locket==0.2.0
-lxml==4.6.3
-Mako==1.1.4
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
-mccabe==0.6.1
-memory-profiler==0.58.0
-mistune==0.8.4
-mlxtend==0.18.0
-mock==4.0.3
-mogrify==0.1
-msgpack==1.0.2
-multidict==5.1.0
-multipledispatch==0.6.0
-murmurhash==1.0.5
-nb-conda==2.2.1
-nb-conda-kernels==2.3.1
-nbclassic==0.3.1
-nbclient==0.5.3
-nbconvert==6.1.0
-nbformat==5.1.3
-nbgrader==0.6.1
-nest-asyncio==1.5.1
-networkx==2.5.1
-nltk==3.6.2
-nose==1.3.7
-notebook==6.4.0
-numba==0.53.1
-numpy==1.19.5
-oauthlib==3.1.1
-olefile==0.46
-opt-einsum==3.3.0
-packaging==21.0
-pandas==1.3.0
-pandocfilters==1.4.2
-parso==0.8.2
-partd==1.2.0
-path==16.0.0
-path.py==12.5.0
-pathy==0.6.0
-patsy==0.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.3.1
-pip==21.3.1
-pipreqs==0.4.11
-plotly==5.1.0
-preshed==3.0.5
-progressbar2==3.53.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.19
-protobuf==3.17.3
-psutil==5.8.0
-psycopg2==2.9.1
-ptyprocess==0.7.0
-py-glm==0.0.1
-py4j==0.10.9
-pyarrow==4.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydantic==1.7.3
-pydeck==0.6.2
-pydot==1.4.2
-pydot-ng==2.0.0
-pygam==0.8.0
-PyGithub==1.55
-Pygments==2.9.0
-PyJWT==2.1.0
-pylint==2.9.3
-pymongo==3.11.4
-PyNaCl==1.4.0
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-PyQt5==5.12.3
-PyQt5_sip==4.19.18
-PyQtChart==5.12
-PyQtWebEngine==5.12.1
-pyrsistent==0.17.3
-PySocks==1.7.1
-pyspark==3.1.2
-python-dateutil==2.8.1
-python-dotenv==0.18.0
-python-editor==1.0.4
-python-frontmatter==1.0.0
-python-Levenshtein==0.12.2
-python-slugify==5.0.2
-python-twitch-client==0.7.1
-python-utils==2.5.6
-pytz==2021.1
-PyYAML==5.4.1
-pyzmq==22.1.0
-qtconsole==5.1.1
-QtPy==1.9.0
-regex==2021.7.6
-requests==2.25.1
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-rsa==4.7.2
-s3fs==2021.6.1
-scattertext==0.1.4
-scikit-learn==0.24.2
-scikit-surprise==1.1.1
-scipy==1.7.0
-seaborn==0.11.1
-selenium==3.141.0
-Send2Trash==1.7.1
-setuptools==57.1.0
-shellingham==1.4.0
-six==1.15.0
-sklearn==0.0
-smart-open==5.1.0
-smmap==4.0.0
-sniffio==1.2.0
-soph==0.2.2
-sortedcontainers==2.4.0
-soupsieve==2.0.1
-spacy==3.0.6
-spacy-legacy==3.0.8
-SQLAlchemy==1.4.20
-srsly==2.4.1
-statsmodels==0.12.2
-streamlit==0.84.0
-svdRec==0.1.1
-tabulate==0.8.9
-tblib==1.7.0
-tenacity==7.0.0
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-terminado==0.10.1
-testpath==0.5.0
-text-unidecode==1.3
-textblob==0.15.3
-thinc==8.0.3
-threadpoolctl==2.1.0
-toml==0.10.2
-toolz==0.11.1
-tornado==6.1
-tqdm==4.61.2
-traitlets==5.0.5
-tweepy==3.10.0
-typer==0.3.2
-typing-extensions==3.7.4.3
-tzlocal==2.1
-urllib3==1.26.6
-validators==0.18.2
-wasabi==0.8.2
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==2.0.1
-wheel==0.36.2
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-xgboost==1.4.0
-XlsxWriter==1.4.4
-yarg==0.1.9
-yarl==1.6.3
-zict==2.0.0
-zipp==3.5.0
+importlib-metadata==3.9
+pandas
+numpy
+Keras
+keras
+Keras-Preprocessing
+matplotlib
+Pillow
+tensorflow
